<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:isScrollContainer="false"
    tools:context=".fragment.RegisterFragment"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/frames_padding"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/edit_name"
        android:paddingStart="@dimen/edit_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name"
        android:inputType="textPersonName"/>
    <TextView
        android:fontFamily="@font/dancing_script"
        android:textSize="@dimen/txt_validate"
        android:textColor="@color/red"
        android:layout_marginBottom="@dimen/input_distance"
        android:id="@+id/tv_validate_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_account"
        android:paddingStart="@dimen/edit_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_account"
        android:inputType="textEmailAddress"/>
    <TextView
        android:fontFamily="@font/dancing_script"
        android:textSize="@dimen/txt_validate"
        android:textColor="@color/red"
        android:layout_marginBottom="@dimen/input_distance"
        android:id="@+id/tv_validate_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_passwd"
        android:paddingStart="@dimen/edit_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_passwd"
        android:inputType="textPassword"/>
    <TextView
        android:fontFamily="@font/dancing_script"
        android:textSize="@dimen/txt_validate"
        android:textColor="@color/red"
        android:layout_marginBottom="@dimen/input_distance"
        android:id="@+id/tv_validate_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_re_passwd"
        android:paddingStart="@dimen/edit_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_re_passwd"
        android:inputType="textPassword"/>
    <TextView
        android:fontFamily="@font/dancing_script"
        android:textSize="@dimen/txt_validate"
        android:textColor="@color/red"
        android:layout_marginBottom="@dimen/input_distance"
        android:id="@+id/tv_validate_re_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_birthday"
        android:padding="@dimen/edit_padding_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"/>
    <TextView
        android:fontFamily="@font/dancing_script"
        android:textSize="@dimen/txt_validate"
        android:textColor="@color/red"
        android:layout_marginBottom="@dimen/input_distance"
        android:id="@+id/tv_validate_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:layout_marginBottom="@dimen/input_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rgGender">
        <TextView
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingStart="@dimen/edit_padding"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/txt_gender"/>
        <RadioButton
            android:layout_weight="1"
            android:id="@+id/rb_boy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/rb_boy"/>
        <RadioButton
            android:layout_weight="1"
            android:id="@+id/rb_girl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/rb_girl"/>
        <RadioButton
            android:id="@+id/rb_diff"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rb_diff" />
    </RadioGroup>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"/>
</LinearLayout>
</androidx.core.widget.NestedScrollView>